--- a/JSONSampleApp/Base.lproj/Main.storyboard
+++ b/JSONSampleApp/Base.lproj/Main.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3715.3"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--WebVC View Controller - Web-->
         <scene sceneID="kiL-4j-b2H">
             <objects>
-                <viewController id="zvo-Tb-wYT" sceneMemberID="viewController">
+                <viewController id="zvo-Tb-wYT" customClass="WebVCViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="G5S-wx-eb2"/>
                         <viewControllerLayoutGuide type="bottom" id="2Tx-j6-SXV"/>
@@ -15,12 +15,36 @@
                     <view key="view" contentMode="scaleToFill" id="tns-7b-iE4">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="16c-D1-X7P">
+                                <rect key="frame" x="0.0" y="64" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h21-CH-PVz">
+                                <rect key="frame" x="0.0" y="25" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Web View" id="2Bc-xq-6yJ">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="a0A-9S-Vlf">
+                                            <connections>
+                                                <action selector="back:" destination="zvo-Tb-wYT" id="r3f-BP-3sL"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Web" id="lFC-N7-e8D"/>
+                    <connections>
+                        <outlet property="webView" destination="16c-D1-X7P" id="yZa-MG-yMW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="II3-tr-UUx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1629" y="-507"/>
+            <point key="canvasLocation" x="1679" y="303"/>
         </scene>
         <!--TextTVC - Text Contents-->
         <scene sceneID="eun-eD-6ol">
@@ -31,13 +55,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="w5E-Tb-njX">
+                            <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="w5E-Tb-njX">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="w5E-Tb-njX" id="ldE-B5-mPf">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="zvo-Tb-wYT" kind="modal" identifier="next" id="ZWA-ID-FCB"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -67,6 +94,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="zvo-Tb-wYT" kind="modal" identifier="webView" id="oH2-Mm-zPc"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -80,22 +110,25 @@
             </objects>
             <point key="canvasLocation" x="1156" y="924"/>
         </scene>
-        <!--Table View Controller - All Contents-->
+        <!--All ContentsTVC - All Contents-->
         <scene sceneID="rZH-21-PmN">
             <objects>
-                <tableViewController id="tpV-ZG-cyE" sceneMemberID="viewController">
+                <tableViewController id="tpV-ZG-cyE" customClass="AllContentsTVC" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="GtL-zX-gTx">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="0PP-Qi-lGj">
+                            <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="0PP-Qi-lGj">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="0PP-Qi-lGj" id="Gvq-v5-vOL">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="zvo-Tb-wYT" kind="push" identifier="web" id="jNd-t2-zpy"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -103,9 +136,7 @@
                             <outlet property="delegate" destination="tpV-ZG-cyE" id="xir-lP-34t"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="All Contents" id="lNA-3m-EWK">
-                        <barButtonItem key="rightBarButtonItem" id="wAt-Mm-tDT"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="All Contents" id="lNA-3m-EWK"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a0x-Vt-Dfa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -199,4 +230,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="oH2-Mm-zPc"/>
+    </inferredMetricsTieBreakers>
 </document>
