--- a/JSONSampleApp/CustomCell.xib
+++ b/JSONSampleApp/CustomCell.xib
@@ -27,7 +27,7 @@
                         <color key="textColor" red="1" green="0.59999999999999998" blue="0.59999999999999998" alpha="0.46000000000000002" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lKy-NV-hez">
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lKy-NV-hez">
                         <rect key="frame" x="80" y="25" width="220" height="45"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
